Set sorted list option to yachts/search